refs/cloudcomputing/Documentation/kubernetes-in-action/curl-with-ambassador.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-with-ambassador
spec:
  containers:
  - name: main
    image: tutum/curl
    command: ["sleep", "infinity"]
  - name: ambassador
    image: luksa/kubectl-proxy:1.6.2
