refs/cloudcomputing/Documentation/kubernetes-in-action/pod-lifecycle.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-lifecycle
spec:
  containers:
  - name: kubia
    image: luksa/kubia
    lifecycle:
      postStart:
        exec:
          command:
          - sh
          - -c
          - "echo 'hook will fail with exit code 5'; sleep 5; exit 15"
      preStop:
        httpGet:
          port: 8080
          path: shutdown
